--- a/css/index.css
+++ b/css/index.css
@@ -9,4 +9,53 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #565454;
+    display: flex;
+    flex-direction: column;
+}
+
+.search-container {
+    background-color: rgb(255, 255, 255);
+    margin: 30px 0;
+    padding: 5px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+}
+
+#search-icon {
+    padding: 5px;
+}
+
+.search-bar {
+    border: solid 1px transparent;
+    padding: 5px;
+    outline: none;
+}
+
+.movies-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 20px;
+}
+
+.movie-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 220px;
+    height: 280px;
+    background-color: rgb(255, 255, 255);
+    overflow: auto;
+}
+
+.movie-poster {
+    width: 200px;
+    height: 250px;
+}
+
+.movie-card h6 {
+    padding-top: 5px;
 }
