--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #565454;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
 }
@@ -35,6 +35,7 @@ body {
 
 .movies-container {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
     padding: 20px;
@@ -46,14 +47,15 @@ body {
     align-items: center;
     justify-content: center;
     width: 220px;
-    height: 280px;
+    height: 320px;
     background-color: rgb(255, 255, 255);
     overflow: auto;
+    border-radius: 10px;
 }
 
 .movie-poster {
     width: 200px;
-    height: 250px;
+    height: 280px;
 }
 
 .movie-card h6 {
